--- a/presale/index (copy).css
+++ b/presale/index (copy).css
@@ -78,7 +78,7 @@ button:hover {
     font-weight:400;
     color: #fff;
     height: 100%;
-    width: 200px;
+    width: 100px;
     align-items:center;
     justify-content:center;
     border-width:2px;
@@ -86,3 +86,22 @@ button:hover {
     border-style:solid;
     border-color: #fff;
   }
+
+.message-box-content::before {
+    content: "Amount (BNB) ?";
+    color: #999999;
+  }
+.message-box-content:not(:empty)::before {
+    content: "";
+    color: #fff;
+  }
+
+.message-box-content:focus {
+    outline: none;
+    color: #fff;
+  }
+.message-box-content:focus::before {
+    color: #bdc1c9;
+    content:"";
+  }
+}
